--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a>
+    <ul>
+        <li><a href="recipes/grilled-cheese.html">Grilled Cheese Sandwich</a></li>
+        <li><a href="recipes/chicago-dog.html">Chicago-Style Hit Dog</a></li>
+        <li><a href="recipes/taco-in-a-bag.html">Taco In A Bag</a></li>
+    </ul>
 </body>
 </html>
