--- a/recipes/grilled-cheese.html
+++ b/recipes/grilled-cheese.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Grilled Cheese Sandwich</h1>
     <img src="../grilled-cheese.jpg" height="40%" width="40%">
-    <p></p>
+    <h2>Description</h2>
+    <p>This classic grilled cheese sandwich recipe calls for just white bread, sliced cheese, and butter. It's easy to switch up the bread and cheese to suit your taste preferences and, if you like, you can substitute mayonnaise for butter.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>4 slices white bread</li>
